# RUST

./: .gitignore  Cargo.toml  README.md  env.bash  run_RUST  rustfmt.toml
html/: index.html  index.js  style.css
plotlib/src/: page.rs  svg_render.rs
plotlib/src/repr/: plot.rs
src/: app.rs  auth.rs  barchart_maker.rs  chart_maker.rs  env.rs  main.rs  model.rs  spotify.rs  templates.rs  web.rs
src/auth/: mod.rs  token_request.rs  token_response.rs
src/model/: artists.rs  mod.rs  tracks.rs
src/plotlib/: mod.rs
src/plotlib/src/: svg_render.rs
src/spotify/: charts.rs  mod.rs  params.rs
src/templates/: curtain.rs  mod.rs  p404.rs  redirect.rs  results_page.rs
src/web/: callback.rs  index.rs  is_up.rs  login.rs  mod.rs  p404.rs  results.rs  test_chart.rs
static/: document.hbs  index.js  is_up.html  stylesheet.css
templates/: curtain.hbs  document.hbs  image_view.hbs  p404.hbs  redirect.hbs  results.hbs
