[package]
name = "rust-utilizing-spotify-tracker"
version = "0.1.0"
authors = [
    "Rylan <rylanoc@gmail.com>",
    "Antonia \"Nia\" Calia-Bogan <acaliabogan@acaliabogan.dev>",
    "Gabe Maayan <gabemgem@gmail.com>",
    "Leland Liu <jiashuliu@protonmail.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Handlebars templating
handlebars = {version="3.0.1", features=["dir_source"]}
# Actix stuff
actix-rt = "1.0.0"
actix-web = {version="2.0.0", features=["openssl"]}
actix-files = "~0.2"
# URL percent encoding
percent-encoding = "2.1.0"
# SSL/TLS crate
openssl = "0.10.28"
# Logger
env_logger = "0.7.1"
log = "0.4.8"
# Serialization/Deserialization
serde = "~1"
serde_derive = "~1"
serde_urlencoded = "0.6.1"
url = { version = "2.0", features = ["serde"] }
serde_json = "1.0"
# Random number generator
rand = "0.7.3"
# Regular expressions
regex = "1.3.6"
# Lazily evaluated statics
lazy_static = "1.4.0"